Fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
   font-style: italic;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   margin: 0 10px 0 10px;
   font-family: DM-Mono;
